# rawfile-localpv

./: .dockerignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pre-commit.nix  .pre-commit.sh  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _config.yml  docker-entrypoint.sh  index.md  index.yaml  pyproject.toml  shell.nix  vm.nix
.ci/: build.sh  common  deployer.sh  gh-release-exists.sh  helm-docs.sh  helm-lint.sh  smoke.sh  trivy.sh
.ci/e2e-test/: rawfile-driver.yaml  setup.sh  test.sh  values.test.yaml
.github/: dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  small-feature-request.yml
.github/scripts/: add.sh
.github/workflows/: ci.yml  docs-only.yml  fossa.yml  ghmq.yml  helm-chart.yml  images.yml  k8s.yml  release.yml  stale.yaml  trivy.yml
deploy/: rawfile-csi-driver.yaml
deploy/charts/rawfile-csi/: README.md  values.yaml
deploy/charts/rawfile-csi/templates/: _helpers.tpl  rbac.yaml
deploy/charts/rawfile-csi/templates/controller/: statefulset.yaml
deploy/charts/rawfile-csi/templates/node-plugin/: daemonset.yaml
deploy/helm/: shell.nix
deploy/helm/rawfile-csi/: Chart.yaml  README.md
deploy/helm/rawfile-csi/charts/crds/: Chart.yaml
deploy/helm/rawfile-csi/templates/: _helpers.tpl
deploy/helm/rawfile-csi/templates/controller/: service.yaml
deploy/helm/rawfile-csi/templates/node-plugin/: daemonset.yaml  service.yaml  servicemonitor.yaml
deploy/helm/rawfile-localpv/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
deploy/helm/rawfile-localpv/charts/crds/: Chart.yaml  README.md
deploy/helm/rawfile-localpv/templates/: _checks.tpl  _helpers.tpl  rbac.yaml  secret.yaml  snapshotclass.yaml  storageclass.yaml
deploy/helm/rawfile-localpv/templates/controller/: deployment.yaml  service.yaml  statefulset.yaml
deploy/helm/rawfile-localpv/templates/node-plugin/: daemonset.yaml  service.yaml  servicemonitor.yaml
docs/: contributor.md  install-guide.md  release.md
docs/design/: taskmanager.md
nix/: sources.json
rawfile/: bd2fs.py  consts.py  declarative.py  fs_util.py  internal_svc.py  metrics.py  rawfile.py  rawfile_servicer.py  rawfile_util.py  remote.py  util.py  volume_schema.py
rawfile/analytics/ga4/: __init__.py  client.py  event.py  ping.py  usage.py  version_set.py
rawfile/api_server/: __init__.py
rawfile/api_server/v1/models/: __init__.py  nodes.py
rawfile/api_server/v1/routes/: __init__.py
rawfile/api_server/v1/routes/nodes/: __init__.py  tasks.py  volumes.py
rawfile/config/: __init__.py  model.py
rawfile/csi/: __init__.py  csi_pb2.py  csi_pb2.pyi  csi_pb2_grpc.py
rawfile/filesystem/: __init__.py  base.py  btrfs.py  ext4.py  types.py  utils.py  xfs.py
rawfile/internal/: __init__.py  internal_pb2.py  internal_pb2.pyi  internal_pb2_grpc.py
rawfile/orchestrator/: k8s.py
rawfile/protos/: csi.proto  internal.proto
rawfile/templates/: task.yaml
rawfile/tests/: pytest.ini  smoke.feature  test_smoke.py
rawfile/tests/common/: __init__.py  helm.py  k8s_deployer.py
rawfile/utils/: commands.py  devices.py  errors.py  lock.py  logs.py  modeltypes.py  rawfile.py  remote.py  snapshot_manager.py  storage_pool.py  task_manager.py  units.py  volume_manager.py
rawfile/utils/fallocate/: __init__.py  build.py
