[tool.poetry]
name = "rawfile"
version = "0.11.0"
description = "Dynamically deploy Stateful Persistent Node-Local Volumes & Filesystems for Kubernetes that is provisioned from RAW-device file loop mounted Local-Hostpath storage."
authors = ["OpenEBS <openebs-team@googlegroups.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
grpcio-tools = "^1.73.1"
grpcio = "^1.74.0"
click = "^8.2.1"
pyyaml = "^6.0.2"
prometheus-client = "^0.22.1"
loguru = "^0.7.3"
cffi = "^1.17.1"
kubernetes = "^33.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
requests = "^2.32.4"
dnspython = "^2.7.0"
tldextract = "^5.3.0"
humanize = "^4.12.3"

[tool.poetry.scripts]
rawfile = "rawfile.rawfile:cli"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-bdd = "^8.1.0"
retrying = "^1.4.0"
kubernetes = "^33.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
