[tool.poetry]
name = "rawfile"
version = "0.12.1"
description = "Dynamically deploy Stateful Persistent Node-Local Volumes & Filesystems for Kubernetes that is provisioned from RAW-device file loop mounted Local-Hostpath storage."
authors = ["OpenEBS <openebs-team@googlegroups.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
grpcio-tools = "^1.76.0"
grpcio = "^1.76.0"
click = "^8.3.1"
pyyaml = "^6.0.3"
prometheus-client = "^0.23.1"
loguru = "^0.7.3"
cffi = "^2.0.0"
kubernetes = "^34.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
requests = "^2.32.5"
dnspython = "^2.8.0"
tldextract = "^5.3.0"
humanize = "^4.14.0"
setproctitle = "^1.3.7"

[tool.poetry.scripts]
rawfile = "rawfile.rawfile:cli"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-bdd = "^8.1.0"
retrying = "^1.4.2"
kubernetes = "^34.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
