[tool.poetry]
name = "rawfile"
version = "0.14.1"
description = "Dynamically deploy Stateful Persistent Node-Local Volumes & Filesystems for Kubernetes that is provisioned from RAW-device file loop mounted Local-Hostpath storage."
authors = ["OpenEBS <openebs-team@googlegroups.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
grpcio-tools = "^1.80.0"
grpcio = "^1.80.0"
click = "^8.3.2"
pyyaml = "^6.0.3"
prometheus-client = "^0.25.0"
loguru = "^0.7.3"
cffi = "^2.0.0"
kubernetes = ">=35,<37"
pydantic = "^2.13.0"
pydantic-settings = "^2.13.1"
requests = "^2.33.1"
dnspython = "^2.8.0"
tldextract = "^5.3.1"
humanize = "^4.15.0"
setproctitle = "^1.3.7"
ipaddress = "^1.0.23"
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = "^0.40.0"

[tool.poetry.scripts]
rawfile = "rawfile.rawfile:cli"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-bdd = "^8.1.0"
retrying = "^1.4.2"
kubernetes = ">=35,<37"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
